removed app service bits. added welcome post

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 author_profile: false
 sidebar: 
     nav: "links"
-excerpt: "Open Source Technologies Blog for Microsoft Azure App Service"
+excerpt: "Azure Spring Cloud - Blog"
 header:
     overlay_image: /media/pages/background.png
     overlay_filter: 0.5
